k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conversor
  template:
    metadata:
      labels:
        app: conversor
    spec:
      containers:
        - name: conversor
          image: registry.gitlab.com/croncl/conversorparapdf:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: conversor-storage
              mountPath: /app/uploads 
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 5000
            failureThreshold: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: conversor-storage
          persistentVolumeClaim:
            claimName: conversor-pvc
      imagePullSecrets:
        - name: gitlab-regcred
