k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversor-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - devops20251-conversorpdf.duckdns.org
      secretName: conversor-tls
  rules:
    - host: devops20251-conversorpdf.duckdns.org # 👉 dominio DuckDNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conversor-service
                port:
                  number: 80
